--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     "60 minutes, you can relax now."
                 ],
                 correct: 0,
-                reason: "The eruption could happen anytime, so you’re already late!"
+                reason: "The question emphasizes that waiting until the last minute to evacuate is unsafe. If the evacuation takes up the entire warning period, you risk getting caught in the eruption. Early evacuation is crucial to avoid dangerous delays caused by blocked roads or worsening conditions."
             },
             {
                 question: "A volcano has erupted, and the ash cloud is moving toward your area. You have an umbrella, a thick coat, and a flashlight. What is the most useful thing to bring when evacuating?",
@@ -98,7 +98,7 @@
                     "None of the above; the best option is to evacuate as quickly as possible."
                 ],
                 correct: 3,
-                reason: "Evacuating quickly is the best way to ensure your safety."
+                reason: "While the listed items may provide minor protection, none of them substitute for timely evacuation. Ashfall can quickly worsen conditions, affecting air quality and visibility, making evacuation the safest action."
             },
             {
                 question: "A volcano is erupting, and you're on a road that leads to safety. You notice the road splits into two paths: one leads directly toward the eruption, and the other goes through a dark tunnel. Which path should you take?",
@@ -109,7 +109,7 @@
                     "Neither path; you should stay put and wait for help."
                 ],
                 correct: 2,
-                reason: "The road that takes you around the eruption zone, avoiding the eruption and the tunnel."
+                reason: "Both the direct path toward the eruption and the dark tunnel carry significant risks. The direct path exposes you to the eruption, and the tunnel may trap you if debris or lava blocks the exit. Choosing a route that avoids immediate hazards is the safest option."
             },
             {
                 question: "You’re in the middle of an eruption, and you’re told to evacuate. You have two bags: one is heavy with food and supplies, and the other is light with just essentials like your ID, phone, and a flashlight. Which bag should you take?",
@@ -120,7 +120,7 @@
                     "Take both bags and carry them as best as you can."
                 ],
                 correct: 1,
-                reason: "Take the light bag because it’s easier to carry quickly."
+                reason: "During an evacuation, speed is critical. A heavy bag slows you down and could exhaust you before reaching safety. Essentials like ID, phone, and a flashlight are enough for immediate survival, and rescue teams can provide additional support later."
             },
             {
                 question: "You are trapped inside a house due to falling ash and can’t see the way out. A neighbor calls and says, “To leave, you need to find a door with no handle, a window that’s not made of glass, and a way out that’s safe but far.” Which of these should you do?",
@@ -131,7 +131,7 @@
                     "Crawl through the smallest window, even if it’s too small."
                 ],
                 correct: 2,
-                reason: "Find a way to open the door without touching the handle, such as a push bar."
+                reason: "This scenario uses a riddle to emphasize finding practical, safe solutions. Breaking windows is dangerous and can expose you to ash. Waiting for help delays your escape. A push-bar door represents an escape route designed for emergencies, prioritizing safety."
             },
             {
                 question: "An eruption is happening, and lava is flowing toward your neighborhood. You’re told to leave immediately, but you’re unsure of the safest route. One road is blocked by debris, and another has a large, fast-moving river. Which route should you take?",
@@ -142,7 +142,7 @@
                     "Take the safest route to higher ground, even if it’s less direct."
                 ],
                 correct: 3,
-                reason: "Take the safest route to higher ground, even if it’s less direct."
+                reason: "Direct paths that are blocked or risky should be avoided. Lava can flow downhill and cross obstacles, making low-lying routes unsafe. Heading to higher ground reduces the risk of encountering lava or flooding, even if it takes longer."
             },
             {
                 question: "A riddle to determine how prepared you are for evacuation: I can’t be seen but can be felt, I fall from the sky and cover the ground, and if I’m not dealt with quickly, I can block your way. What am I?",
