--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
         function endGame(message) {
             clearInterval(timerInterval);
-            document.getElementById('quiz-content').innerHTML = `<h2>${message}</h2>${reason ? `<p><strong>Reason:</strong> ${reason}</p>` : ""}`;
+            document.getElementById('quiz-content').innerHTML = `<h2>${message}</h2>`;
             
         }
     </script>
