--- a/index.html
+++ b/index.html
@@ -165,6 +165,30 @@
                 ],
                 correct: 1,
                 reason: "Ash, which can severely obstruct your path and vision during a volcanic eruption."
+            },
+            {
+                question: "If you are staying indoors during an eruption and notice ash building up on your roof, what should you do?",
+                options: [
+                    "Let the ash settle and clear it later.",
+                    "Attempt to remove the ash immediately, even if it’s heavy.",
+                    "Stay inside and avoid disturbing the ash; it may cause your roof to collapse.",
+                    "Ignore the ash; it will blow away on its own in a few hours."
+                ],
+                correct: 2,
+                reason: "Ash can accumulate and cause structural damage, especially if it’s wet or heavy. It's safer to stay inside and wait for professionals to handle the situation."
+            },
+            {
+                question: "A volcano is erupting, and you are unsure of which evacuation route to take. One route is open, but there’s a chance of falling debris. The other is blocked but has been cleared recently. What should you do?",
+                options: [
+                    "Take the open route, as it seems safer.",
+                    "Wait until the eruption stops before deciding which route to take.",
+                    "Choose the recently cleared route to avoid the risk of falling debris.",
+                    "Choose neither route and stay at your location."
+                ],
+                correct: 2,
+                reason: "The open route might have debris from the eruption, making it dangerous. The recently cleared route, even if blocked earlier, is now the safer option. Never delay evacuation, as conditions can worsen quickly.
+
+"
             }
             // Add more questions as needed.
         ];
