--- a/index.html
+++ b/index.html
@@ -186,9 +186,7 @@
                     "Choose neither route and stay at your location."
                 ],
                 correct: 2,
-                reason: "The open route might have debris from the eruption, making it dangerous. The recently cleared route, even if blocked earlier, is now the safer option. Never delay evacuation, as conditions can worsen quickly.
-
-"
+                reason: "The open route might have debris from the eruption, making it dangerous. The recently cleared route, even if blocked earlier, is now the safer option. Never delay evacuation, as conditions can worsen quickly."
             }
             // Add more questions as needed.
         ];
