--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 document.getElementById("timer").textContent = `Time Left: ${timeLeft}s`;
                 if (timeLeft <= 0) {
                     clearInterval(timerInterval);
-                    endGame("Time's up! ur dead lol");
+                    endGame("Time's up! irl, u wont even have this 20 seconds...");
                 }
             }, 1000);
         }
