--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
                 ],
                 correct: 2,
                 reason: "The open route might have debris from the eruption, making it dangerous. The recently cleared route, even if blocked earlier, is now the safer option. Never delay evacuation, as conditions can worsen quickly."
+            },
+            {
+                question: "You’re in a volcanic eruption zone and hear an alert for a "possible pyroclastic flow" heading in your direction. What should you do?"
+                options: [
+                    "Wait and see if the pyroclastic flow reaches you before evacuating.",
+                    "Leave immediately, as pyroclastic flows are extremely fast and dangerous.",
+                    "Continue with your normal routine since pyroclastic flows are not as dangerous as lava.",
+                    "Stay inside, as being indoors will protect you from a pyroclastic flow."
+                ],
+                correct: 1,
             }
             // Add more questions as needed.
         ];
