--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     "Stay inside, as being indoors will protect you from a pyroclastic flow."
                 ],
                 correct: 1,
+                reason: "Pyroclastic flows can move at terrifying speeds, and they are extremely dangerous due to heat and speed. Delaying evacuation puts you at great risk. Always act fast when such warnings are issued."
             }
             // Add more questions as needed.
         ];
