--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                 reason: "The open route might have debris from the eruption, making it dangerous. The recently cleared route, even if blocked earlier, is now the safer option. Never delay evacuation, as conditions can worsen quickly."
             },
             {
-                question: "You’re in a volcanic eruption zone and hear an alert for a possible pyroclastic flow heading in your direction. What should you do?"
+                question: "Youre in a volcanic eruption zone and hear an alert for a possible pyroclastic flow heading in your direction. What should you do?",
+                
                 options: [
                     "Wait and see if the pyroclastic flow reaches you before evacuating.",
                     "Leave immediately, as pyroclastic flows are extremely fast and dangerous.",
