--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             clearInterval(timerInterval);
 
             if (!isCorrect) {
-                endGame("Wrong answer! ur dead lol");
+                endGame("Wrong answer! Every single answer is in the readme file. Its YOUR fault.");
                 return;
             }
 
