--- a/in.html
+++ b/in.html
@@ -87,7 +87,7 @@
         </div>
         <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="text-align: center; margin-top: 20px; font-size: 14px; color: #666;">
             <a property="dct:title" rel="cc:attributionURL" href="https://www.github.com/bjl32/ela">ela/Volcano Quiz</a> 
-            by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.github.com/ela">bjl32</a> 
+            by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.github.com/bjl32">bjl32</a> 
             is licensed under 
             <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
                 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
