--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
         <div id="quiz-content">
             <button class="start-btn" onclick="startQuiz()">Start Quiz</button>
         </div>
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="text-align: center; margin-top: 20px; font-size: 14px; color: #666;">
+            <a property="dct:title" rel="cc:attributionURL" href="https://www.github.com/bjl32/ela">ela/Volcano Quiz</a> 
+            by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.github.com/ela">bjl32</a> 
+            is licensed under 
+            <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
+                Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
+                <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
+                <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
+                <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="">
+                <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nd.svg?ref=chooser-v1" alt="">
+            </a>
+        </p>
+        
     </div>
 
     <script>
